<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/newback"
    tools:context=".UI.home.homeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderLayout
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@string/bold"
                android:text="Government Polytechnic Amravati"
                android:textColor="@color/black"
                android:textSize="@dimen/title_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/about_college"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@string/bold"
                    android:gravity="center_horizontal"
                    android:text="Departments"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/grey" />


                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/newback"
                    android:clipToPadding="false"
                    android:foregroundGravity="center"
                    android:overScrollMode="never" />
                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/indicator"
                    android:layout_below="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    app:ci_gravity="center"

                    />



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="@color/grey" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@string/bold"
                    android:text="Contact Details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/title_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="@string/contactusno"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size01" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@string/light"
                    android:text="@string/contactusemail"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size01" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />


            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</FrameLayout>